# legend-pure

./: BUILD.bazel  INDEX.md  grammar.bzl  pure_test.bzl
legend-pure-core/legend-pure-m3-bootstrap-generator/: BUILD.bazel
legend-pure-core/legend-pure-m3-bootstrap-generator/src/main/java/org/finos/legend/pure/m3/bootstrap/generator/: CoreInstanceGenerator.java  M3ToJavaGenerator.java
legend-pure-core/legend-pure-m3-core/: BUILD.bazel  README.md  all_files.txt  inspect.bzl  pure.bzl  tests.txt
legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/generator/bootstrap/: M3CoreInstanceGenerator.java
legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/tools/forkjoin/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/tools/kerberos/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/tools/locks/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/tools/test/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/tools/tree/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/coreinstance/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/coreinstance/helper/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/navigation/graph/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/navigation/property/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/pct/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/serialization/compiler/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/serialization/filesystem/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/serialization/runtime/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/: BUILD.bazel  PureAssertions.java  RuntimeTestScriptBuilder.java
legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/generictype/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/imports/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/lineinfo/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/milestoning/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tools/: BUILD.bazel
legend-pure-core/legend-pure-m3-core/src/test/resources/: BUILD.bazel
legend-pure-core/legend-pure-m3-precisePrimitives/: BUILD.bazel
legend-pure-core/legend-pure-m4/: BUILD.bazel
legend-pure-core/legend-pure-m4/src/main/java/org/finos/legend/pure/m4/tools/: GraphNodeIterable.java
legend-pure-core/legend-pure-m4/src/test/java/org/finos/legend/pure/m4/coreinstance/: TestSourceInformation.java
legend-pure-dsl/legend-pure-dsl-diagram/legend-pure-m2-dsl-diagram-grammar/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-diagram/legend-pure-m2-dsl-diagram-pure/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-diagram/legend-pure-runtime-java-extension-compiled-dsl-diagram/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-graph/legend-pure-m2-dsl-graph-grammar/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-graph/legend-pure-m2-dsl-graph-pure/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-graph/legend-pure-runtime-java-extension-compiled-dsl-graph/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-grammar/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-runtime-java-extension-compiled-dsl-mapping/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-path/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-path/legend-pure-m2-dsl-path-grammar/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-path/legend-pure-m2-dsl-path-pure/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-path/legend-pure-runtime-java-extension-compiled-dsl-path/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-path/legend-pure-runtime-java-extension-interpreted-dsl-path/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-grammar/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure/src/main/resources/platform_dsl_store/grammar/: runtime.pure
legend-pure-dsl/legend-pure-dsl-store/legend-pure-runtime-java-extension-compiled-dsl-store/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-grammar/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-pure/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-tds/legend-pure-runtime-java-extension-compiled-dsl-tds/: BUILD.bazel
legend-pure-dsl/legend-pure-dsl-tds/legend-pure-runtime-java-extension-interpreted-dsl-tds/: BUILD.bazel
legend-pure-runtime/legend-pure-runtime-java-engine-interpreted/: BUILD.bazel
legend-pure-runtime/legend-pure-runtime-java-engine-shared/: BUILD.bazel
legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-grammar/: BUILD.bazel
legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-pure/: BUILD.bazel
legend-pure-store/legend-pure-store-relational/legend-pure-runtime-java-extension-compiled-store-relational/: BUILD.bazel  relational.bzl
(+147 files in other folders)
