load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "legend-pure-m3-bootstrap-generator",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@maven//:org_eclipse_collections_eclipse_collections",
        "@maven//:org_eclipse_collections_eclipse_collections_api",
    ],
    visibility = ["//visibility:public"],
)

java_binary(
    name = "CoreInstanceGenerator",
    main_class = "org.finos.legend.pure.m3.bootstrap.generator.CoreInstanceGenerator",
    runtime_deps = [":legend-pure-m3-bootstrap-generator"],
    visibility = ["//visibility:public"],
)

java_test(
    name = "TestJavaTools",
    srcs = ["src/test/java/org/finos/legend/pure/m3/tools/TestJavaTools.java"],
    test_class = "org.finos.legend.pure.m3.tools.TestJavaTools",
    deps = [
        ":legend-pure-m3-bootstrap-generator",
        "@maven//:junit_junit",
        "@maven//:org_eclipse_collections_eclipse_collections",
        "@maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
