load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("@rules_java//java:java_test.bzl", "java_test")

java_library(
    name = "legend-pure-m3-bootstrap-generator",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_binary(
    name = "CoreInstanceGenerator",
    main_class = "org.finos.legend.pure.m3.bootstrap.generator.CoreInstanceGenerator",
    visibility = ["//visibility:public"],
    runtime_deps = [":legend-pure-m3-bootstrap-generator"],
)

java_test(
    name = "TestJavaTools",
    srcs = ["src/test/java/org/finos/legend/pure/m3/tools/TestJavaTools.java"],
    test_class = "org.finos.legend.pure.m3.tools.TestJavaTools",
    deps = [
        ":legend-pure-m3-bootstrap-generator",
        "@legend_maven//:junit_junit",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
