load("@rules_java//java:defs.bzl", "java_library")

filegroup(
    name = "grammar_files",
    srcs = [
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3Lexer.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3Parser.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/core/M3CoreLexer.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/core/M3CoreParser.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrLexer.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrParser.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/treepathparser/TreePath.g4",
    ],
    visibility = ["//visibility:public"],
)

# 1. Antlr Generation
genrule(
    name = "antlr_gen",
    visibility = ["//visibility:public"],
    srcs = [
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3Lexer.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3Parser.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/core/M3CoreLexer.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/core/M3CoreParser.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrLexer.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrParser.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/treepathparser/TreePath.g4",
    ] + [
        "//legend-pure/legend-pure-core/legend-pure-m4:grammar_files",
    ],
    outs = [
        "org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3Parser.java",
        "org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3ParserVisitor.java",
        "org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3ParserListener.java",
        "org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3ParserBaseVisitor.java",
        "org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3ParserBaseListener.java",
        "org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3Lexer.java",
        "org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3Lexer.tokens",
        
        "org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrParser.java",
        "org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrParserVisitor.java",
        "org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrParserListener.java",
        "org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrParserBaseVisitor.java",
        "org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrParserBaseListener.java",
        "org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrLexer.java",
        "org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrLexer.tokens",

        "org/finos/legend/pure/m3/serialization/grammar/treepathparser/TreePathParser.java",
        "org/finos/legend/pure/m3/serialization/grammar/treepathparser/TreePathListener.java",
        "org/finos/legend/pure/m3/serialization/grammar/treepathparser/TreePathVisitor.java",
        "org/finos/legend/pure/m3/serialization/grammar/treepathparser/TreePathBaseListener.java",
        "org/finos/legend/pure/m3/serialization/grammar/treepathparser/TreePathBaseVisitor.java",
        "org/finos/legend/pure/m3/serialization/grammar/treepathparser/TreePathLexer.java",
        "org/finos/legend/pure/m3/serialization/grammar/treepathparser/TreePathLexer.tokens",
    ],
    cmd = """
        set -e
        mkdir -p antlr_flat
        
        # Copy all sources (m3 and m4) to antlr_flat
        for f in $(SRCS); do
            cp "$$f" antlr_flat/
        done
        
        # 1. Lexers (Generates .tokens files)
        # M3Lexer
        $(location //legend-pure:antlr4_tool) \\
        -package org.finos.legend.pure.m3.serialization.grammar.m3parser.antlr \\
        -visitor -listener \\
        -lib antlr_flat \\
        -o $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr \\
        antlr_flat/M3Lexer.g4
        
        # Move outputs up from antlr_flat subdir
        mv $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/antlr_flat/* $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/
        rmdir $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/antlr_flat
        
        # TopAntlrLexer
        $(location //legend-pure:antlr4_tool) \\
        -package org.finos.legend.pure.m3.serialization.grammar.top.antlr \\
        -visitor -listener \\
        -lib antlr_flat \\
        -o $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/top/antlr \\
        antlr_flat/TopAntlrLexer.g4

        # Move outputs up from antlr_flat subdir
        mv $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/top/antlr/antlr_flat/* $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/top/antlr/
        rmdir $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/top/antlr/antlr_flat

        # 2. Copy generated tokens to antlr_flat so Parsers can find them
        cp $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3Lexer.tokens antlr_flat/
        cp $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrLexer.tokens antlr_flat/

        # 3. Parsers
        # M3Parser
        $(location //legend-pure:antlr4_tool) \\
        -package org.finos.legend.pure.m3.serialization.grammar.m3parser.antlr \\
        -visitor -listener \\
        -lib antlr_flat \\
        -o $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr \\
        antlr_flat/M3Parser.g4
        
        # Move outputs up
        mv $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/antlr_flat/* $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/
        rmdir $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/antlr_flat
        
        # TopAntlrParser
        $(location //legend-pure:antlr4_tool) \\
        -package org.finos.legend.pure.m3.serialization.grammar.top.antlr \\
        -visitor -listener \\
        -lib antlr_flat \\
        -o $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/top/antlr \\
        antlr_flat/TopAntlrParser.g4

        # Move outputs up
        mv $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/top/antlr/antlr_flat/* $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/top/antlr/
        rmdir $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/top/antlr/antlr_flat

        # 4. TreePath (Combined)
        $(location //legend-pure:antlr4_tool) \\
        -package org.finos.legend.pure.m3.serialization.grammar.treepathparser \\
        -visitor -listener \\
        -lib antlr_flat \\
        -o $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/treepathparser \\
        antlr_flat/TreePath.g4
        
        # Move outputs up
        mv $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/treepathparser/antlr_flat/* $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/treepathparser/
        rmdir $(RULEDIR)/org/finos/legend/pure/m3/serialization/grammar/treepathparser/antlr_flat
    """,
    tools = ["//legend-pure:antlr4_tool"],
)

# 2. Bootstrap Generator
genrule(
    name = "bootstrap_gen",
    visibility = ["//visibility:public"],
    srcs = glob(["src/main/resources/**/*.pure"]),
    outs = ["bootstrap_gen.srcjar"],
    cmd = """
        mkdir -p bootstrap_out
        
        # We need to pass absolute path or relative to workspace for resources? 
        # The generator likely uses java.io.File.
        # Validating path: "legend-pure/legend-pure-core/legend-pure-m3-core/src/main/resources"
        ls -R legend-pure/legend-pure-core/legend-pure-m3-core/src/main/resources
        
        $(location //legend-pure/legend-pure-core/legend-pure-m3-bootstrap-generator:CoreInstanceGenerator) \\
        bootstrap_out/ \\
        legend-pure/legend-pure-core/legend-pure-m3-core/src/main/resources \\
        /platform/pure/grammar/m3.pure
        
        # Zip into srcjar
        cd bootstrap_out
        zip -q -r ../$(OUTS) .
    """,
    tools = ["//legend-pure/legend-pure-core/legend-pure-m3-bootstrap-generator:CoreInstanceGenerator"],
)

# 2b. Platform Properties Generation
genrule(
    name = "platform_properties_gen",
    outs = ["org/finos/legend/pure/platform.properties"],
    cmd = "echo 'version=0.0.0-SNAPSHOT' > $(location org/finos/legend/pure/platform.properties)",
)

java_library(
    name = "platform_properties_lib",
    resources = [":platform_properties_gen"],
    resource_strip_prefix = "legend-pure/legend-pure-core/legend-pure-m3-core",
    visibility = ["//visibility:public"],
)

# 3. Base Library


# 4. Lazy Generator
java_binary(
    name = "M3LazyCoreInstanceGenerator",
    main_class = "org.finos.legend.pure.m3.coreinstance.lazy.generator.M3LazyCoreInstanceGenerator",
    runtime_deps = [":m3-core-base"],
)

genrule(
    name = "lazy_gen",
    srcs = glob(["src/main/resources/**/*.pure"]),
    outs = ["lazy_gen.srcjar"],
    cmd = """
        mkdir -p lazy_out
        
        $(location :M3LazyCoreInstanceGenerator) \\
        lazy_out \\
        /platform/pure/grammar/m3.pure
        
        cd lazy_out
        zip -q -r ../$(OUTS) .
    """,
    tools = [":M3LazyCoreInstanceGenerator"],
)

# 5. Other Generator
java_binary(
    name = "M3CoreInstanceGenerator",
    main_class = "org.finos.legend.pure.m3.generator.bootstrap.M3CoreInstanceGenerator",
    runtime_deps = [":m3-core-base"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "other_gen",
    srcs = glob(["src/main/resources/**/*.pure"]),
    outs = ["other_gen.srcjar"],
    cmd = """
        mkdir -p other_out
        
        $(location :M3CoreInstanceGenerator) \\
        other_out/ \\
        M3Platform \\
        /platform/pure/grammar/milestoning.pure,/platform/pure/routing.pure,/platform/pure/anonymousCollections.pure,/platform/pure/relation.pure,/platform/pure/routing.pure,/platform/pure/variant/variant.pure,/platform/pure/essential/meta/graph/elementToPath.pure,/platform/pure/essential/lang/creation/dynamicNew.pure
        
        cd other_out
        zip -q -r ../$(OUTS) .
    """,
    tools = [":M3CoreInstanceGenerator"],
)

# 6. PCT Generation
java_binary(
    name = "FunctionsGeneration",
    main_class = "org.finos.legend.pure.m3.pct.functions.generation.FunctionsGeneration",
    runtime_deps = [
        ":m3-core-base",
        ":pure_platform_par_lib",
    ],
    visibility = ["//visibility:public"],
)

genrule(
    name = "pct_reports",
    outs = [
        "pct-reports/FUNCTIONS_essential.json",
        "pct-reports/FUNCTIONS_grammar.json",
    ],
    cmd = """
        mkdir -p $(@D)/pct-reports
        $(location :FunctionsGeneration) $(@D)/pct-reports org.finos.legend.pure.m3.PlatformCodeRepositoryProvider.essentialFunctions
        $(location :FunctionsGeneration) $(@D)/pct-reports org.finos.legend.pure.m3.PlatformCodeRepositoryProvider.grammarFunctions
    """,
    tools = [":FunctionsGeneration"],
)

java_library(
    name = "pct_reports_lib",
    resources = [":pct_reports"],
    resource_strip_prefix = "legend-pure/legend-pure-core/legend-pure-m3-core",
    visibility = ["//visibility:public"],
)

# 6. Final Library
java_library(
    name = "legend-pure-m3-core",
    srcs = [
        ":lazy_gen",
        ":other_gen",
    ],
    exports = [
        ":m3-core-base",
        ":pct_reports_lib",
    ],
    deps = [
        ":m3-core-base",
        ":pct_reports_lib",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@maven//:org_eclipse_collections_eclipse_collections",
        "@maven//:org_eclipse_collections_eclipse_collections_api",
        "@maven//:org_antlr_antlr4_runtime",
    ],
    javacopts = [
        "-Xep:ComparableType:OFF",
    ],
    visibility = ["//visibility:public"],
)

java_library(
    name = "m3-core-base",
    visibility = ["//visibility:public"],
    exports = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3:m3_kernel",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/tools/locks:locks",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/tools/test:test",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/tools/kerberos:kerberos",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/tools/tree:tree",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/pct/aggregate/generation:generation",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/pct/aggregate/model:model",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/pct/functions/model:model",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/pct/reports/model:model",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/pct/shared/generation:generation",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/pct/shared/provider:provider",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/pct/shared/model:model",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/tools/forkjoin:forkjoin"
    ],
)

java_library(
    name = "m3-core-test-utils",
    visibility = ["//visibility:public"],
    exports = [
        ":m3-core-base",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/tools/test:test",
    ],
)

java_library(
    name = "pure_platform_par_lib",
    resources = [
        ":bootstrap_gen",
        ":lazy_gen",
        ":other_gen",
    ],
    visibility = ["//visibility:public"],
)
